--- a/calc.html
+++ b/calc.html
@@ -331,14 +331,17 @@
 	<div class="b-modal" id="call_me">
 		<div class="b-modal_close arcticmodal-close"></div>
 		<div class="block box fff">
-			<div class="ah1 slab upp">Отправить заявку</div>
-			<div class="ah2">Ваше имя</div>
-			<input type="text" class="inputbox db box w100 p0">
-			<div class="ah2">Телефон</div>
-			<input type="text" class="inputbox db box w100 p0 mask">
-			<div class="ah2">Сообщение</div>
-			<textarea class="p0 db w100 box"></textarea>
-			<button class="alCenter slab upp beige button">Отправить заявку</button>
+			<div class="ah1 slab alCenter">Обратный звонок</div>
+			<input type="text" placeholder="Ваше имя" class="inputbox db rL box w100 p0 name">
+			<input type="text" placeholder="Номер телефона" class="fon inputbox db box w100 p0 mas rL">
+			<div>
+				<label class="db rL">Я согласен на обработку 
+<a>персональных данных</a>
+					<input type="checkbox">
+					<b></b>
+				</label>
+			</div>
+			<button class="alCenter slab upp beige button green_button">Отправить</button>
 		</div>
 	</div>
 </div>
