--- a/typical.html
+++ b/typical.html
@@ -87,7 +87,7 @@
 			</nav>
 		</div>
 		<main id="main">
-			<div class="item__page">
+			<div class="item__page type_page">
 					<div class="banner_block cover fff" style="background-image: url(images/zabor_page/big_banner.jpg);">
 						<div class="inner">
 							<h1 class="pagetitle">Заборы в Дмитрове под ключ</h1>
@@ -108,13 +108,12 @@
 				
 					<div class="price_block price_block_type_page">
 						<div class="inner">
-							<div class="pagetitle alCenter">Цена на заборы в Дмитрове с установкой</div>
-							
+							<div class="pagetitle alCenter">Цена на заборы в Дмитрове <span class="on_mobile"></span> с установкой</div>
 								<div class="dd rL ">
 									<div class="item rL active">
-										<p>Цена конструкции складывается из нескольких факторов: используемых материалов, 
+										<p>Цена конструкции складывается <b class="on_mobile"></b> из нескольких факторов: используемых материалов, 
 объема заказа, сложности работы, удаленности строительного объекта.</p>
-										<div class="ah3 medium black">Стоимость забора из профнастила в Дмитрове</div>
+										<div class="ah3 medium black">Стоимость забора <b class="on_mobile"></b> из профнастила в Дмитрове</div>
 										<div class="table1">
 											<table class="w100">
 												<tr>
@@ -333,7 +332,7 @@
 									</div><!--end item-->
 
 									<div class="item rL active item_type_page2">
-										<div class="ah3 medium black">Стоимость забора из сетки-рабицы в Дмитрове:</div>
+										<div class="ah3 medium black">Стоимость забора из <span class="no_wrap">сетки-рабицы</span> в Дмитрове:</div>
 										<div class="table2">
 											<table class="w100">
 												<tr>
@@ -471,9 +470,9 @@
 						</div>
 					</div>
 					<!-- end price_block -->
-					<div class="stat_block">
+					<div class="stat_block stat_block_magnifier-hover">
 						<div class="inner rL hid">
-							<div class="pagetitle alCenter">Примеры установленных заборов в Дмитрове</div>
+							<div class="pagetitle alCenter">Примеры установленных заборов <span class="on_mobile"></span> в Дмитрове</div>
 							<div class="rL hid">
 								<div class="example_slider row">
 									<div class="block fleft rL hid w25 box">
@@ -545,29 +544,65 @@
 						</div>
 					</div>
 					<!-- end stat_block -->
-					<div class="textarea_block">
+					<div class="width-gray-block">
 						<div class="inner">
-							<div class="pagetitle alCenter">«Страна Заборов» - это надежный партнер!</div>
-							<div class="rL hid">
-								<div class="fleft rL hid left_block w50 box">
-									Редко кто сейчас усомнится в том, что строительство забора из профнастила должно быть поручено профессионалам. <i class="db"></i>
-									В этом случае вам остается лишь выбрать надежную компанию. Свои услуги по гарантированно качественному изготовлению и монтажу заборов из разных материалов и любой сложности готова предложить фирма «Страна Заборов».
+							<div class="pagetitle alCenter">Заказывайте заборы <span class="on_mobile"></span> в Дмитрове <span class="on_mobile"></span> у профессионалов!</div>
+							<div class="block cover black" style="background-image: url(images/width-gray-block.jpg);">
+								<div>
+									<div class="medium ah3">Компания «Страна Заборов» устанавливает заборы по всему Дмитровскому району, а именно:</div>
+									<div class="flex_wrap">
+										<ul class="item w25 box flex_shrink flex_grow">
+											<li>Деденево;</li>
+											<li>Дядьково;</li>
+											<li>Икша;</li>
+										</ul>
+										<ul class="item w25 box flex_shrink flex_grow">
+											<li>Деденево;</li>
+											<li>Дядьково;</li>
+											<li>Икша;</li>
+										</ul>
+										<div class="cp more_button on_mobile"><a>Смотреть еще</a></div>
+										<ul class="item w25 box flex_shrink flex_grow">
+											<li>Деденево;</li>
+											<li>Дядьково;</li>
+											<li>Икша;</li>
+										</ul>
+										<ul class="item w25 box flex_shrink flex_grow">
+											<li>Деденево;</li>
+											<li>Дядьково;</li>
+											<li>Икша;</li>
+										</ul>
+									</div>
 								</div>
-								<div class="fright rL hid right_block w50 box">
-									<ul>
-										<li>Профессиональный подход, использование качественных материалов и комплектующих, соблюдение технологических особенностей монтажа.</li>
-										<li>Доступные расценки на услуги. Предоплата составляет всего 10% – редкая компания предлагает своим клиентам такое условие.</li>
-										<li>Квалифицированный и опытный персонал – от менеджеров, принимающих заказы, до строителей.</li>
-										<li>Работаем по Москве и Московской области.</li>
-										<li>Предоставляем гарантии на работы.</li>
-									</ul>
+							</div>
+							<div class="after-block">
+								<div class="fleft rL hid box w50 medium left_block black">
+									<p>Выезд мобильного менеджера - 1250 рублей;</p>
+									<p>Доставка материалов на объект – 1190 рублей.</p>
 								</div>
-								<div class="fleft w50 rL hid left_block box">
-									<p><b>Чтобы заказать изготовление и установку забора из профнастила, позвоните нам по телефону  <a href="tel:+74952285069">+7 (495) 228-50-69</a>  либо приходите в один из офисов компании «Страна Заборов» с 9 до 20 часов. Мы работаем ежедневно, будем рады вас видеть.</b></p>
+								<div class="rL hid">
+									<i class="mark db">Стоимость доставки зависит от объема заказа, удаленности 
+    объекта и оговаривается с заказчиков индивидуально.</i>
 								</div>
 								<div class="clear"></div>
 							</div>
 						</div>
+					</div>
+					<!-- end width-gray-block -->
+					<div class="inner">
+						<div class="get-banner cover flex_wrap flex_just flex_no_wrap fff" style="background-image: url(images/get-banner.jpg);">
+							<div class="w100 sbold left_block box">
+								<div class="pagetitle">Заказать забор </div>
+								<p>Позвоните нам по телефону и узнайте примерную цену на изготовление и установку забора.</p>
+							</div>
+							<div class="right_block flex_shrink">
+								<div class="call_block">
+									<a href="tel:+74952285069" class="phone db rL sbold ">+7 (495) 228-50-69</a>
+									<a href="" class="call_me inb vT">Обратный звонок</a>
+								</div>
+							</div>
+						</div>
+						<!-- end get-banner -->
 					</div>
 			</div>
 
@@ -673,14 +708,17 @@
 	<div class="b-modal" id="call_me">
 		<div class="b-modal_close arcticmodal-close"></div>
 		<div class="block box fff">
-			<div class="ah1 slab upp">Отправить заявку</div>
-			<div class="ah2">Ваше имя</div>
-			<input type="text" class="inputbox db box w100 p0">
-			<div class="ah2">Телефон</div>
-			<input type="text" class="inputbox db box w100 p0 mask">
-			<div class="ah2">Сообщение</div>
-			<textarea class="p0 db w100 box"></textarea>
-			<button class="alCenter slab upp beige button">Отправить заявку</button>
+			<div class="ah1 slab alCenter">Обратный звонок</div>
+			<input type="text" placeholder="Ваше имя" class="inputbox db rL box w100 p0 name">
+			<input type="text" placeholder="Номер телефона" class="fon inputbox db box w100 p0 mas rL">
+			<div>
+				<label class="db rL">Я согласен на обработку 
+<a>персональных данных</a>
+					<input type="checkbox">
+					<b></b>
+				</label>
+			</div>
+			<button class="alCenter slab upp beige button green_button">Отправить</button>
 		</div>
 	</div>
 </div>
