--- a/gallery.html
+++ b/gallery.html
@@ -403,18 +403,20 @@
 
 <!-- modal-->
 <div class="g-hidden">
-	<div class="b-modal" id="gallery_modal">
+	<div class="b-modal" id="call_me">
 		<div class="b-modal_close arcticmodal-close"></div>
-		<div class="block work_slider">
-				<div>
-					<div class="img w100 cover" style="background-image: url(images/gallery/gallery1.png);"></div>
-				</div>
-				<div>
-					<div class="img w100 cover" style="background-image: url(images/gallery/gallery1.png);"></div>
-				</div>
-				<div>
-					<div class="img w100 cover" style="background-image: url(images/gallery/gallery1.png);"></div>
-				</div>
+		<div class="block box fff">
+			<div class="ah1 slab alCenter">Обратный звонок</div>
+			<input type="text" placeholder="Ваше имя" class="inputbox db rL box w100 p0 name">
+			<input type="text" placeholder="Номер телефона" class="fon inputbox db box w100 p0 mas rL">
+			<div>
+				<label class="db rL">Я согласен на обработку 
+<a>персональных данных</a>
+					<input type="checkbox">
+					<b></b>
+				</label>
+			</div>
+			<button class="alCenter slab upp beige button green_button">Отправить</button>
 		</div>
 	</div>
 </div>
