--- a/zabor.html
+++ b/zabor.html
@@ -862,6 +862,7 @@
 											</a>
 										</div>
 									</div>
+									<div class="clear"></div>
 								</div>
 							</div>
 						</div>
