--- a/policar.html
+++ b/policar.html
@@ -104,6 +104,7 @@
 							<div class="pagetitle alCenter">Отличительные свойства поликарбоната</div>
 							<p class="top_text">Поликарбонат – это современный полимерный материал, появившийся на отечественном рынке относительно недавно.<span class="db"></span>
 Он нашел себе применение в качестве материала для автомобильных навесов благодаря следующим преимуществам:</p>
+							<div class="rL hid">
 							<div class="container mobile_slider row">
 
 									<div class="item rL fleft box w33-3">
@@ -134,8 +135,7 @@
 										<h2>Безопасность</h2>
 										<p>Поликарбонат не горит и не образует осколков с острыми краями (хотя и разбить его непросто), поэтому не угрожает безопасности людей и животных.</p>
 									</div>
-									<div class="clear"></div>
-
+							</div>
 							</div>
 						</div>
 					</div>
@@ -144,7 +144,7 @@
 						<div class="inner">
 							<div class="pagetitle alCenter">Виды поликарбоната</div>
 							<div class="color_block">
-								<div class="block_left fleft w50">
+								<div class="block_left fleft w49">
 									<div class="image_block rL">
 										<div class="block cover" style="background-image:url(images/varieties_block/fon_1.jpg);"></div>
 										<div class="number abs">1</div>
@@ -155,7 +155,7 @@
 									</div>
 								
 								</div>
-								<div class="block_right fleft w50">
+								<div class="block_right fright w49">
 									<div class="image_block  rL">
 										<div class="block cover" style="background-image:url(images/varieties_block/fon_2.jpg);"></div>
 										<div class="number abs">2</div>
@@ -310,15 +310,15 @@
 								<div class="block_right fleft w50"><p>Чтобы заказать изготовление и установку навеса из поликарбоната, позвоните нам по телефону  <a href="tel:84952285069">+7 (495) 228-50-69</a>  либо приходите в один из офисов компании «Страна Заборов» с 9 до 20 часов. Мы работаем ежедневно, будем рады вас видеть.</p></div>
 								<div class="clear"></div>
 							</div>
+
 							<div class="banner box">
-								<div class="block_left fleft">
+								<div class="block_left ">
 									<h2>Расчет стоимости навеса</h2>
 									<p>Узнайте примерную цену на изготовление и установку.</p>
 								</div>
-								<div class="block_right fright">
+								<div class="block_right ">
 									<a href="" class="calculation_button green_button cp">Расчет стоимости</a>
 								</div>
-								<div class="clear"></div>
 							</div>
 						</div>
 					</div>
