--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 		</header>
 		<main id="main">
 			<div class="big_menu rL cover hid" style="background-image: url(images/big_menu.jpg);">
-				<video loop autoplay muted="muted" class="bgvideo">
+				<!-- <video loop autoplay muted="muted" class="bgvideo">
 					<source src="images/video.mp4" type="video/mp4" />
-				</video>
+				</video> -->
 				<span></span>
 				<div class="inner">
 					<div class="mobile_slider">
@@ -627,17 +627,27 @@
 		<div class="b-modal_close arcticmodal-close"></div>
 		<div class="block box fff">
 			<div class="ah1 slab alCenter">Обратный звонок</div>
-			<input type="text" placeholder="Ваше имя" class="inputbox db rL box w100 p0 name">
-			<input type="text" placeholder="Номер телефона" class="fon inputbox db box w100 p0 mas rL">
-			<div>
-				<label class="db rL">Я согласен на обработку 
-<a>персональных данных</a>
-					<input type="checkbox">
-					<b></b>
-				</label>
-			</div>
-			<button class="alCenter slab upp beige button green_button">Отправить</button>
-		</div>
+			<div role="form" class="wpcf7" id="wpcf7-f320-o1" lang="ru-RU" dir="ltr">
+<div class="screen-reader-response"></div>
+<form action="/#wpcf7-f320-o1" method="post" class="wpcf7-form" novalidate="novalidate">
+<div style="display: none;">
+<input type="hidden" name="_wpcf7" value="320">
+<input type="hidden" name="_wpcf7_version" value="5.1.1">
+<input type="hidden" name="_wpcf7_locale" value="ru_RU">
+<input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f320-o1">
+<input type="hidden" name="_wpcf7_container_post" value="0">
+<input type="hidden" name="g-recaptcha-response" value="">
+</div>
+<p><span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required inputbox db rL box w100 p0 name" aria-required="true" aria-invalid="false" placeholder="Ваше имя"></span><br>
+<span class="wpcf7-form-control-wrap tel-544"><input type="tel" name="tel-544" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-tel wpcf7-validates-as-required wpcf7-validates-as-tel fon inputbox db box w100 p0 mas rL mask" aria-required="true" aria-invalid="false" placeholder="Номер телефона"></span></p>
+<div>
+<label class="db rL js-label"><span class="wpcf7-form-control-wrap acceptance-741"><span class="wpcf7-form-control wpcf7-acceptance"><span class="wpcf7-list-item"><input type="checkbox" name="acceptance-741" value="1" aria-invalid="false"></span></span></span> Я согласен на обработку<br>
+<a>персональных данных</a><br>
+<b></b><br>
+</label>
+</div>
+<p><input type="submit" value="Отправить" class="wpcf7-form-control wpcf7-submit" disabled=""><span class="ajax-loader"></span></p>
+<div class="wpcf7-response-output wpcf7-display-none"></div></form></div>		</div>
 	</div>
 </div>
 
@@ -645,26 +655,36 @@
 	<div class="b-modal" id="call_me2">
 		<div class="b-modal_close arcticmodal-close"></div>
 		<div class="block box fff">
-			<div class="ah1 slab">Вызов замерщика</div>
-			<p>У нас Вы можете заказать специалиста по заборам к себе на участок или на объект. Выезды осуществляются по Москве и Московской области.</p>
-				<div class="box w50 left fleft">
-					<input type="text" placeholder="Ваше имя" class="inputbox db rL box w100 p0 name">
-				</div>
-				<div class="box w50 right fleft">
-					<input type="text" placeholder="Номер телефона" class="fon inputbox db box w100 p0 mas rL">
-				</div>
-				<div class="clear"></div>
-				<textarea placeholder="Комментарий " class="db w100 inputbox"></textarea>
-				<button class="alCenter slab upp beige button green_button fright">Отправить</button>
-			<div class="rL hid">
-				<label class="db rL">Я согласен на обработку 
-<a>персональных данных</a>
-					<input type="checkbox">
-					<b></b>
-				</label>
-			</div>
-			<div class="clear"></div>
+					<div class="ah1 slab">Вызов замерщика</div>
+					<p>У нас Вы можете заказать специалиста по заборам к себе на участок или на объект. Выезды осуществляются по Москве и Московской области.</p>
+						<div role="form" class="wpcf7" id="wpcf7-f321-o2" lang="ru-RU" dir="ltr">
+		<div class="screen-reader-response"></div>
+		<form action="/#wpcf7-f321-o2" method="post" class="wpcf7-form" novalidate="novalidate">
+		<div style="display: none;">
+		<input type="hidden" name="_wpcf7" value="321">
+		<input type="hidden" name="_wpcf7_version" value="5.1.1">
+		<input type="hidden" name="_wpcf7_locale" value="ru_RU">
+		<input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f321-o2">
+		<input type="hidden" name="_wpcf7_container_post" value="0">
+		<input type="hidden" name="g-recaptcha-response" value="">
 		</div>
+		<div class="box w50 left fleft">
+		<span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required inputbox db rL box w100 p0 name" aria-required="true" aria-invalid="false" placeholder="Ваше имя"></span>
+		</div>
+		<div class="box w50 right fleft">
+		<span class="wpcf7-form-control-wrap tel-544"><input type="tel" name="tel-544" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-tel wpcf7-validates-as-required wpcf7-validates-as-tel fon inputbox db box w100 p0 mas rL" aria-required="true" aria-invalid="false" placeholder="Номер телефона"></span>
+		</div>
+		<div class="clear"></div>
+		<p><span class="wpcf7-form-control-wrap your-message"><textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea db w100 inputbox" aria-invalid="false" placeholder="Комментарий"></textarea></span><br>
+		<input type="submit" value="Отправить" class="wpcf7-form-control wpcf7-submit" disabled=""><span class="ajax-loader"></span></p>
+		<div class="rL hid abs_label">
+						<label class="db rL js-label"><span class="wpcf7-form-control-wrap acceptance-741"><span class="wpcf7-form-control wpcf7-acceptance"><span class="wpcf7-list-item"><input type="checkbox" name="acceptance-741" value="1" aria-invalid="false"></span></span></span> Я согласен на обработку<br>
+		<a>персональных данных</a><br>
+							<b></b><br>
+						</label><p></p>
+		<div class="wpcf7-response-output wpcf7-display-none"></div></div></form>			</div>
+					<div class="clear"></div>
+				</div>
 	</div>
 </div>
 
@@ -672,33 +692,45 @@
 	<div class="b-modal" id="call_me3">
 		<div class="b-modal_close arcticmodal-close"></div>
 		<div class="block box fff">
-			<div class="ah1 slab">Заказать установку забора</div>
-			<p>Заполните форму и наши менеджеры свяжутся с Вами 
-для уточнения деталей</p>
-				<div class="box w50 left fleft">
-					<input type="text" placeholder="Ваше имя" class="inputbox db rL box w100 p0 name">
-				</div>
-				<div class="box w50 right fleft">
-					<input type="text" placeholder="Номер телефона" class="fon inputbox db box w100 p0 mas rL">
-				</div>
-				<div class="box w50 left fleft">
-					<input type="text" placeholder="Электронный адрес" class="inputbox db rL box w100 p0 mail">
-				</div>
-				<div class="box w50 right fleft">
-					<input type="text" placeholder="Адрес" class="adres inputbox db box w100 p0 rL">
-				</div>
-				<div class="clear"></div>
-				<textarea placeholder="Комментарий " class="db w100 inputbox"></textarea>
-				<button class="alCenter slab upp beige button green_button fright">Отправить</button>
-			<div class="rL hid">
-				<label class="db rL">Я согласен на обработку 
-<a>персональных данных</a>
-					<input type="checkbox">
-					<b></b>
-				</label>
-			</div>
-			<div class="clear"></div>
+					<div class="ah1 slab">Заказать установку забора</div>
+					<p>Заполните форму и наши менеджеры свяжутся с Вами 
+		для уточнения деталей</p>
+		<div role="form" class="wpcf7" id="wpcf7-f322-o3" lang="ru-RU" dir="ltr">
+		<div class="screen-reader-response"></div>
+		<form action="/#wpcf7-f322-o3" method="post" class="wpcf7-form" novalidate="novalidate">
+		<div style="display: none;">
+		<input type="hidden" name="_wpcf7" value="322">
+		<input type="hidden" name="_wpcf7_version" value="5.1.1">
+		<input type="hidden" name="_wpcf7_locale" value="ru_RU">
+		<input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f322-o3">
+		<input type="hidden" name="_wpcf7_container_post" value="0">
+		<input type="hidden" name="g-recaptcha-response" value="">
 		</div>
+		<div style="display:none;"><span class="wpcf7-form-control-wrap textarea-id"><textarea name="textarea-id" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea wpcf7-validates-as-required" aria-required="true" aria-invalid="false"></textarea></span> <span class="wpcf7-form-control-wrap textarea-sum"><textarea name="textarea-sum" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea wpcf7-validates-as-required" aria-required="true" aria-invalid="false"></textarea></span></div>
+		<div class="box w50 left fleft">
+		<span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required inputbox db rL box w100 p0 name" aria-required="true" aria-invalid="false" placeholder="Ваше имя"></span>
+						</div>
+		<div class="box w50 right fleft">
+		<span class="wpcf7-form-control-wrap tel-544"><input type="tel" name="tel-544" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-tel wpcf7-validates-as-required wpcf7-validates-as-tel fon inputbox db box w100 p0 mas rL" aria-required="true" aria-invalid="false" placeholder="Номер телефона"></span>
+						</div>
+		<div class="box w50 left fleft">
+		<span class="wpcf7-form-control-wrap email-180"><input type="email" name="email-180" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-email inputbox db rL box w100 p0 mail" aria-invalid="false" placeholder="Электронный адрес"></span>
+						</div>
+		<div class="box w50 right fleft">
+		<span class="wpcf7-form-control-wrap your-adres"><input type="text" name="your-adres" value="" size="40" class="wpcf7-form-control wpcf7-text adres inputbox db box w100 p0 mas rL" aria-invalid="false" placeholder="Адрес"></span>
+						</div>
+		<div class="clear"></div>
+		<p><span class="wpcf7-form-control-wrap your-message"><textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea db w100 inputbox" aria-invalid="false" placeholder="Комментарий"></textarea></span><br>
+		<input type="submit" value="Отправить" class="wpcf7-form-control wpcf7-submit" ><span class="ajax-loader"></span></p>
+		<div class="rL hid abs_label">
+						<label class="db rL js-label"><span class="wpcf7-form-control-wrap acceptance-741"><span class="wpcf7-form-control wpcf7-acceptance"><span class="wpcf7-list-item"><input type="checkbox" name="acceptance-741" value="1" aria-invalid="false"></span></span></span> Я согласен на обработку<br>
+		<a>персональных данных</a><br>
+							<b></b><br>
+						</label>
+					</div>
+		<div class="wpcf7-response-output wpcf7-display-none"></div></form></div><div id="super" class="hideall"></div>
+					<div class="clear"></div>
+				</div>
 	</div>
 </div>
 
