--- a/discounts.html
+++ b/discounts.html
@@ -113,6 +113,36 @@
      длиной более 100 метров.</p>
 						 		</div>
 						 	</div>
+						 	<div class="fleft rL w50 box banner1">
+						 		<div class="yellow_block rL">
+						 			<p>Выгодная<b>предоплата</b></p>
+						 		</div>
+						 		<div class="grey_block rL">
+						 			<span class="db">При заказе забора из профлиста высотой 2 метра с односторонним полимерным покрытием:</span>
+						 			<p><b>предоплата по договору 30%</b> от стоимости материалов.</p>
+						 		</div>
+						 	</div>
+						 	<div class="fright rL w50 box banner2">
+						 		<div class="yellow_block rL">
+						 			<p>Длиннее забор -<b>ниже цена!</b></p>
+						 		</div>
+						 		<div class="grey_block rL">
+						 			<span class="db">Cкидки на материал при заказе заборов:</span>
+						 			<p>Профлист - <b>скидка 3%</b> на материал при заказе забора 
+     длиной более 85 метров.</p>
+     <p>Рабица - <b>скидка 3%</b> на материал при заказе забора 
+     длиной более 100 метров.</p>
+						 		</div>
+						 	</div>
+						 	<div class="fleft rL w50 box banner1">
+						 		<div class="yellow_block rL">
+						 			<p>Выгодная<b>предоплата</b></p>
+						 		</div>
+						 		<div class="grey_block rL">
+						 			<span class="db">При заказе забора из профлиста высотой 2 метра с односторонним полимерным покрытием:</span>
+						 			<p><b>предоплата по договору 30%</b> от стоимости материалов.</p>
+						 		</div>
+						 	</div>
 						 	<div class="clear"></div>
 						</div>
 					 </div>
