--- a/discounts.html
+++ b/discounts.html
@@ -92,7 +92,7 @@
 					 <h1 class="pagetitle alCenter">Акции</h1>
 					 <div class="main_block">
 						<div class="inner">
-						 	<div class="fleft rL w50 box banner1">
+						 	<div class="rL w49 box banner1">
 						 		<div class="yellow_block rL">
 						 			<p>Выгодная<b>предоплата</b></p>
 						 		</div>
@@ -101,7 +101,7 @@
 						 			<p><b>предоплата по договору 30%</b> от стоимости материалов.</p>
 						 		</div>
 						 	</div>
-						 	<div class="fright rL w50 box banner2">
+						 	<div class="rL w49 box banner2">
 						 		<div class="yellow_block rL">
 						 			<p>Длиннее забор -<b>ниже цена!</b></p>
 						 		</div>
@@ -113,7 +113,7 @@
      длиной более 100 метров.</p>
 						 		</div>
 						 	</div>
-						 	<div class="fleft rL w50 box banner1">
+						 	<div class="rL w49 box banner1">
 						 		<div class="yellow_block rL">
 						 			<p>Выгодная<b>предоплата</b></p>
 						 		</div>
@@ -122,7 +122,7 @@
 						 			<p><b>предоплата по договору 30%</b> от стоимости материалов.</p>
 						 		</div>
 						 	</div>
-						 	<div class="fright rL w50 box banner2">
+						 	<div class="rL w49 box banner2">
 						 		<div class="yellow_block rL">
 						 			<p>Длиннее забор -<b>ниже цена!</b></p>
 						 		</div>
@@ -134,7 +134,7 @@
      длиной более 100 метров.</p>
 						 		</div>
 						 	</div>
-						 	<div class="fleft rL w50 box banner1">
+						 	<div class="rL w49 box banner1">
 						 		<div class="yellow_block rL">
 						 			<p>Выгодная<b>предоплата</b></p>
 						 		</div>
@@ -143,7 +143,6 @@
 						 			<p><b>предоплата по договору 30%</b> от стоимости материалов.</p>
 						 		</div>
 						 	</div>
-						 	<div class="clear"></div>
 						</div>
 					 </div>
 					<div class="inner">
